# rktest

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: run_tests.yaml
include/rktest/: nextafterf.h  rktest.h
samples/: sample01_factorial.c  sample1_factorial.c  sample1_factorial.h  sample1_factorial_tests.c
src/: main.c  rktest.c  rktest.h  rktest_main.c  rktest_poc.h  test.c  test2.c
tests/: assert_numeric_tests.c  bar.c  char_tests.c  death_tests.c  disabled_tests.c  expect_numeric_tests.c  fail_tests.c  fixture_tests.c  float_tests.c  foo.c  integer_tests.c  numeric_tests.c  pointer_tests.c  snapshot_test.py  string_tests.c  wildcard_match_tests.c
tests/__snapshots__/: snapshot_test.ambr
